--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
+    "rss-parser": "^3.12.0",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.1"
+    "vue-iframes": "^0.0.20",
+    "vue-router": "^3.5.1",
+    "vuejs-twitter-feed": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
