--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "daisyui": "^2.24.0",
+    "konsta": "^0.11.1",
     "register-service-worker": "^1.7.2",
     "rss-parser": "^3.12.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^2.6.14",
     "vue-iframes": "^0.0.20",
     "vue-router": "^3.5.1",
@@ -19,22 +22,26 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@tailwindcss/typography": "^0.5.4",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "autoprefixer": "^9.8.8",
+    "autoprefixer": "^10.4.8",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "postcss": "^7.0.39",
+    "postcss": "^8.4.16",
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "tailwindcss": "^3.1.8",
     "vue-template-compiler": "^2.6.14"
   }
 }
