--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ajv": "^8.11.0",
     "core-js": "^3.8.3",
     "daisyui": "^2.24.0",
     "konsta": "^0.11.1",
